// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`joinOptions should match snapshots 1`] = `
[
  "Neptunium",
  ", ",
  "Plutonium",
  ", ",
  "Americium",
  ", ",
  "Curium",
]
`;

exports[`joinOptions should match snapshots 2`] = `
[
  <b>
    Neptunium
  </b>,
  ", ",
  <b>
    Plutonium
  </b>,
  ", ",
  <b>
    Americium
  </b>,
  ", ",
  <b>
    Curium
  </b>,
]
`;

exports[`joinOptions should match snapshots 3`] = `
[
  "Neptunium",
]
`;

exports[`joinOptions should match snapshots 4`] = `
[
  <b>
    Neptunium
  </b>,
]
`;

exports[`joinOptions should match snapshots 5`] = `null`;

exports[`joinOptions should match snapshots 6`] = `null`;
